# google-cloud-cpp-bigquery-poc

./: .gitignore  .gitmodules  CMakeLists.txt  Makefile  dump_query.cpp  main.cpp  parse_query.cpp
.github/workflows/: ci.yml
include/arrow/: Message_generated.h  Schema_generated.h  SparseTensor_generated.h  Tensor_generated.h
include/nanoarrow/: nanoarrow.h
